# QCXUtil

./: CMakeLists.txt
qcxutil/: interface.h
qcxutil/crypt/: cryptfiledevice.cpp  cryptfiledevice.h
qcxutil/letter/: lettermodel.cpp  lettermodel.h
qcxutil/qrcode/: qrcode.cpp  qrcode.h
qcxutil/quazip/: quazipfile.cpp  quazipfile.h
qcxutil/trimesh2/: conv.cpp  conv.h  cylindercreator.cpp  cylindercreator.h  q3drender.cpp  q3drender.h  renderprimitive.cpp  renderprimitive.h  trimesh2qgeometryrenderer.cpp  trimesh2qgeometryrenderer.h  vec2qvector.cpp  vec2qvector.h
qcxutil/util/: nest2djob.cpp  nest2djob.h  nestdata.cpp  nestdata.h  surfaceRecon.cpp  surfaceRecon.h  tessutil.cpp  tessutil.h  traitsutil.h
qcxutil/xml/: cxcontent.cpp  cxcontent.h  xmlutil.cpp  xmlutil.h
